// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual regression snapshots > matches the shell chrome structure in dark theme 1`] = `
<div
  class="fo-shell-frame"
>
  <header
    class="fo-topbar"
  >
    <div
      class="fo-brand"
    >
      <span
        aria-hidden="true"
        class="fo-brand-mark"
      >
        FO
      </span>
      <h1>
        FileOctopus
      </h1>
      <span
        class="fo-ui-badge fo-ui-badge--default"
      >
        Rust-powered
      </span>
    </div>
    <div
      class="fo-menubar"
      role="menubar"
    >
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_7_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              F
            </u>
            ile
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_8_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              E
            </u>
            dit
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_9_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              V
            </u>
            iew
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_a_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              G
            </u>
            o
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_b_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              T
            </u>
            ools
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_c_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              W
            </u>
            indow
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_d_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              H
            </u>
            elp
          </span>
        </button>
      </div>
    </div>
    <div
      class="fo-topbar-actions"
    >
      <button
        class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm"
        type="button"
      >
        Settings
      </button>
    </div>
  </header>
  <section
    aria-label="File workspace preview"
    class="fo-workspace"
  >
    <aside
      class="fo-sidebar fo-sidebar-section"
    >
      <h2
        class="fo-sidebar-section-title"
      >
        Favorites
      </h2>
    </aside>
    <div
      aria-label="File panels preview"
      class="fo-dual-pane"
    >
      <section
        class="fo-panel fo-panel-active"
      >
        <header
          class="fo-panel-header"
        >
          <span
            class="fo-pane-badge"
          >
            Left
          </span>
        </header>
      </section>
      <section
        class="fo-panel"
      >
        <header
          class="fo-panel-header"
        >
          <span
            class="fo-pane-badge"
          >
            Right
          </span>
        </header>
      </section>
    </div>
    <aside
      aria-label="Job activity"
      class="fo-activity fo-activity-rail"
    >
      <header
        class="fo-activity-header"
      >
        <div>
          <h2>
            Jobs & Activity
          </h2>
          <p>
            Operations and history
          </p>
        </div>
        <button
          aria-label="Collapse activity panel"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-icon-btn fo-ui-btn--sm"
          title="Collapse activity panel"
          type="button"
        >
          −
        </button>
      </header>
      <div
        aria-label="Activity views"
        class="fo-ui-segmented fo-activity-segmented"
        role="group"
      >
        <button
          aria-pressed="true"
          class="fo-ui-segmented-item fo-ui-segmented-item--active"
          type="button"
        >
          Activity
        </button>
        <button
          aria-pressed="false"
          class="fo-ui-segmented-item"
          type="button"
        >
          History
        </button>
      </div>
      <div
        class="fo-activity-body"
      >
        <section
          aria-label="Active jobs"
          class="fo-activity-cards"
        >
          <h3
            class="fo-activity-section-title"
          >
            Active Jobs
          </h3>
          <div
            class="fo-empty-inline"
          >
            No active jobs
          </div>
        </section>
      </div>
    </aside>
  </section>
  <footer
    aria-label="Application status"
    class="fo-status"
  >
    <span
      class="fo-status-segment fo-status-readiness"
    >
      Ready
    </span>
    <span
      class="fo-status-segment fo-status-pane"
      title="/Users/ilya/Documents"
    >
      Left pane
       - 
      /Users/ilya/Documents
    </span>
    <span
      class="fo-status-segment"
    >
      1 selected - 128 KB
    </span>
    <span
      class="fo-status-segment"
    >
      12 items
    </span>
    <button
      class="fo-status-segment fo-status-button"
      type="button"
    >
      0
       active job
      s
       - No errors
    </button>
  </footer>
</div>
`;

exports[`visual regression snapshots > matches the shell chrome structure in light theme 1`] = `
<div
  class="fo-shell-frame"
>
  <header
    class="fo-topbar"
  >
    <div
      class="fo-brand"
    >
      <span
        aria-hidden="true"
        class="fo-brand-mark"
      >
        FO
      </span>
      <h1>
        FileOctopus
      </h1>
      <span
        class="fo-ui-badge fo-ui-badge--default"
      >
        Rust-powered
      </span>
    </div>
    <div
      class="fo-menubar"
      role="menubar"
    >
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_0_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              F
            </u>
            ile
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_1_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              E
            </u>
            dit
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_2_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              V
            </u>
            iew
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_3_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              G
            </u>
            o
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_4_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              T
            </u>
            ools
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_5_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              W
            </u>
            indow
          </span>
        </button>
      </div>
      <div
        class="fo-ui-dropdown fo-ui-dropdown--start"
      >
        <button
          aria-controls="_r_6_"
          aria-expanded="false"
          aria-haspopup="menu"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm fo-menubar-trigger"
          type="button"
        >
          <span
            class="fo-menubar-trigger-inner"
            role="menuitem"
          >
            <u>
              H
            </u>
            elp
          </span>
        </button>
      </div>
    </div>
    <div
      class="fo-topbar-actions"
    >
      <button
        class="fo-ui-btn fo-ui-btn--ghost fo-ui-btn--sm"
        type="button"
      >
        Settings
      </button>
    </div>
  </header>
  <section
    aria-label="File workspace preview"
    class="fo-workspace"
  >
    <aside
      class="fo-sidebar fo-sidebar-section"
    >
      <h2
        class="fo-sidebar-section-title"
      >
        Favorites
      </h2>
    </aside>
    <div
      aria-label="File panels preview"
      class="fo-dual-pane"
    >
      <section
        class="fo-panel fo-panel-active"
      >
        <header
          class="fo-panel-header"
        >
          <span
            class="fo-pane-badge"
          >
            Left
          </span>
        </header>
      </section>
      <section
        class="fo-panel"
      >
        <header
          class="fo-panel-header"
        >
          <span
            class="fo-pane-badge"
          >
            Right
          </span>
        </header>
      </section>
    </div>
    <aside
      aria-label="Job activity"
      class="fo-activity fo-activity-rail"
    >
      <header
        class="fo-activity-header"
      >
        <div>
          <h2>
            Jobs & Activity
          </h2>
          <p>
            Operations and history
          </p>
        </div>
        <button
          aria-label="Collapse activity panel"
          class="fo-ui-btn fo-ui-btn--ghost fo-ui-icon-btn fo-ui-btn--sm"
          title="Collapse activity panel"
          type="button"
        >
          −
        </button>
      </header>
      <div
        aria-label="Activity views"
        class="fo-ui-segmented fo-activity-segmented"
        role="group"
      >
        <button
          aria-pressed="true"
          class="fo-ui-segmented-item fo-ui-segmented-item--active"
          type="button"
        >
          Activity
        </button>
        <button
          aria-pressed="false"
          class="fo-ui-segmented-item"
          type="button"
        >
          History
        </button>
      </div>
      <div
        class="fo-activity-body"
      >
        <section
          aria-label="Active jobs"
          class="fo-activity-cards"
        >
          <h3
            class="fo-activity-section-title"
          >
            Active Jobs
          </h3>
          <div
            class="fo-empty-inline"
          >
            No active jobs
          </div>
        </section>
      </div>
    </aside>
  </section>
  <footer
    aria-label="Application status"
    class="fo-status"
  >
    <span
      class="fo-status-segment fo-status-readiness"
    >
      Ready
    </span>
    <span
      class="fo-status-segment fo-status-pane"
      title="/Users/ilya/Documents"
    >
      Left pane
       - 
      /Users/ilya/Documents
    </span>
    <span
      class="fo-status-segment"
    >
      1 selected - 128 KB
    </span>
    <span
      class="fo-status-segment"
    >
      12 items
    </span>
    <button
      class="fo-status-segment fo-status-button"
      type="button"
    >
      0
       active job
      s
       - No errors
    </button>
  </footer>
</div>
`;
